--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.0.0",
+    "mongoose": "^8.0.0",
+    "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
